[gd_scene load_steps=9 format=2]

[ext_resource path="res://TestFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Raw/background1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Raw/music_test.mp3" type="AudioStream" id=3]
[ext_resource path="res://Resources/Raw/buttons-clip-art-21.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ButtonStart.gd" type="Script" id=5]
[ext_resource path="res://Scripts/GameNodeController.gd" type="Script" id=6]
[ext_resource path="res://Resources/Raw/button_rhytm.png" type="Texture" id=7]
[ext_resource path="res://Scripts/EndGameScreenController.gd" type="Script" id=8]

[node name="MainSceneTest" type="Node2D"]

[node name="ButtonNode" type="Node2D" parent="."]
z_index = 15

[node name="Button" type="Button" parent="ButtonNode"]
margin_left = 177.0
margin_top = 251.0
margin_right = 789.0
margin_bottom = 527.0
rect_scale = Vector2( 0.444443, 0.28 )
icon = ExtResource( 4 )
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ButtonNode/Button"]
anchor_left = 0.092
anchor_top = 0.124
anchor_right = 0.887
anchor_bottom = 0.826
margin_left = 18.6962
margin_top = 15.7759
margin_right = -4.30371
margin_bottom = -3.76408
custom_fonts/font = ExtResource( 1 )
text = "Start"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 299.125, 406 )
scale = Vector2( 0.523342, 0.423719 )
texture = ExtResource( 2 )

[node name="GameNode" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="MusicMain" type="AudioStreamPlayer2D" parent="GameNode"]
stream = ExtResource( 3 )

[node name="Rhytm" type="Node2D" parent="GameNode"]
position = Vector2( 310, 651 )

[node name="StartPosition1" type="Node2D" parent="GameNode/Rhytm"]
position = Vector2( -400, -90 )

[node name="StartPosition2" type="Node2D" parent="GameNode/Rhytm"]
position = Vector2( -400, 50 )

[node name="TimerToStart" type="Timer" parent="GameNode/Rhytm"]
wait_time = 2.0
one_shot = true

[node name="ButtonUp" type="Sprite" parent="GameNode/Rhytm"]
position = Vector2( 180, -90 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="ButtonUpButton" type="Button" parent="GameNode/Rhytm/ButtonUp"]
margin_left = -307.0
margin_top = -333.0
margin_right = 333.0
margin_bottom = 300.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDown" type="Sprite" parent="GameNode/Rhytm"]
position = Vector2( 180, 50 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="ButtonDownButton" type="Button" parent="GameNode/Rhytm/ButtonDown"]
margin_left = -307.0
margin_top = -307.0
margin_right = 300.0
margin_bottom = 287.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugTimer" type="Label" parent="GameNode"]
margin_left = 9.0
margin_top = 10.0
margin_right = 243.0
margin_bottom = 180.0
rect_scale = Vector2( 0.880001, 0.568285 )
custom_fonts/font = ExtResource( 1 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugScore" type="Label" parent="GameNode"]
margin_left = 448.0
margin_top = 12.0
margin_right = 753.0
margin_bottom = 182.0
rect_scale = Vector2( 0.465584, 0.520191 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndGameScreen" type="Node2D" parent="."]
visible = false
z_index = 15
script = ExtResource( 8 )

[node name="ScoreLabel" type="Label" parent="EndGameScreen"]
margin_top = 231.0
margin_right = 788.0
margin_bottom = 401.0
rect_scale = Vector2( 0.760001, 0.76 )
custom_fonts/font = ExtResource( 1 )
text = "Score: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="ButtonNode/Button" to="ButtonNode/Button" method="_on_Button_pressed"]
[connection signal="timeout" from="GameNode/Rhytm/TimerToStart" to="GameNode" method="_on_TimerToStart_timeout"]
[connection signal="button_down" from="GameNode/Rhytm/ButtonUp/ButtonUpButton" to="GameNode" method="_on_ButtonUpButton_button_down"]
[connection signal="button_down" from="GameNode/Rhytm/ButtonDown/ButtonDownButton" to="GameNode" method="_on_ButtonDownButton_button_down"]
[connection signal="timeout" from="GameEndTimer" to="GameNode" method="_on_GameEndTimer_timeout"]
